tests/valid_seq/int_impl_imports_2.m
:- module int_impl_imports_2.
:- interface.

:- type bar == int.
