tests/invalid/after_end_module.m
:- module after_end_module.

:- interface.

:- type foo == int.

:- end_module after_end_module.

:- type bar == int.
